--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-native": "0.64.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.0",
+    "react-native-paper-dropdown": "^1.0.7",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "sharingan-rn-modal-dropdown": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
