--- a/package.json
+++ b/package.json
@@ -12,21 +12,26 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/raleway": "^0.2.2",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "native-base": "^3.4.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.1.0",
+    "react-native-bubble-select": "^0.6.0",
+    "react-native-gesture-handler": "^2.4.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.0",
     "react-native-paper-dropdown": "^1.0.7",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-reanimated": "^2.7.0",
+    "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "~3.10.1",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1",
     "sharingan-rn-modal-dropdown": "^1.4.0"
   },
