--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-bubble-select": "^0.6.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.0",
     "react-native-paper-dropdown": "^1.0.7",
+    "react-native-pulse": "^1.0.7",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.10.1",
