--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-bubble-select": "^0.6.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-multi-selectbox": "^1.5.0",
     "react-native-paper": "^4.12.0",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-reanimated": "^2.3.1",
