--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "lottie-react-native": "^5.0.1",
     "native-base": "^3.4.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
